Dummy_Package_for_scratch_org/main/default/objects/MultiCloudAutomation__mdt/fields/DeployAPIName__c.field-meta.xml
<CustomField>
    <fullName>DeployAPIName__c</fullName>
    <label>DeployAPIName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>