Dummy_Package_for_scratch_org/main/default/objects/MultiCloudAutomation__mdt/fields/PackageImportAPIName__c.field-meta.xml
<CustomField>
    <fullName>PackageImportAPIName__c</fullName>
    <label>PackageImportAPIName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>