Dummy_Package_for_scratch_org/main/default/objects/MultiCloudAutomation__mdt/fields/PackageVersionCreateApiName__c.field-meta.xml
<CustomField>
    <fullName>PackageVersionCreateApiName__c</fullName>
    <label>PackageVersionCreateApiName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>