Dummy_Package_for_scratch_org/main/default/objects/MultiCloudAutomation__mdt/fields/PlatformName__c.field-meta.xml
<CustomField>
    <fullName>PlatformName__c</fullName>
    <label>PlatformName</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>