Dummy_Package_for_scratch_org/main/default/objects/MultiCloudAutomation__mdt/fields/PromoteAPIName__c.field-meta.xml
<CustomField>
    <fullName>PromoteAPIName__c</fullName>
    <label>PromoteAPIName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>